[tool.poetry]
name = "biblesearch"
version = "0.1.0"
description = ""
authors = ["Unviray <unviray@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = {extras = ["datalib"], version = "^0.27.4"}
environs = "^9.5.0"
pandas = "^2.0.0"
numpy = "^1.24.2"
chromadb = "^0.3.21"
peewee = "^3.16.0"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
transformers = "^4.27.4"
torch = "^2.0.0"
sacremoses = "^0.0.53"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
